Reworked to add support for java.nio.file.CopyOption